splitview: Fix failing DCHECK in OnWindowActivated.

This failed previously because when SnapWindow is called after ToggleOverview,
it ends the overview start animations, which then activates the hidden
overview textfield. This causes OnWindowActivated to be called before
SnapWindow has finished, so IsSplitViewModeActive() still returns false.

Test: tested with DCHECKS enabled
Bug: 906707
Change-Id: Ic7b99eb8642f8bf1cd1badaa6fa6c981127987a7
Reviewed-on: https://chromium-review.googlesource.com/c/1342807
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Reviewed-by: Xiaoqian Dai <xdai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#609408}
Former-commit-id: 48ac7e2a00aaa3c8950438ebf9072d91f8eadcc5